<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="model"
            type="com.chucknorrisjokes.viewmodel.MainActivityViewModel" />

        <variable
            name="clickHandler"
            type="com.chucknorrisjokes.callbacks.OnClickHandlerInterface" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp20">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="center"
            android:src="@drawable/chuck_norris_imgg" />

        <Button
            style="@style/btn_style"
            android:layout_marginTop="@dimen/dp20"
            android:background="@android:color/white"
            android:onClick="@{(v)-> clickHandler.onRandomJokeClick(v)}"
            android:text="@string/random_joke" />

        <Button
            style="@style/btn_style"
            android:layout_marginTop="@dimen/dp20"
            android:background="@android:color/white"
            android:onClick="@{(v)-> clickHandler.onSearchJokeClick(v)}"
            android:text="@string/search_joke" />

        <Button
            style="@style/btn_style"
            android:layout_marginTop="@dimen/dp20"
            android:background="@android:color/white"
            android:onClick="@{(v)-> clickHandler.onJokeCategoryClick(v)}"
            android:text="@string/category_list" />

    </LinearLayout>

</layout>