<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp15">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:paddingTop="@dimen/dp7"
                android:paddingBottom="@dimen/dp7"
                android:text="@string/enter_search_text"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_13_5sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_searchJoke"
                    style="@style/signup_edit_text"
                    android:hint="@string/enter_to_search"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:maxLength="@integer/max_search_text"
                    android:maxLines="1"
                    android:textAppearance="@style/LatoSemiBold"
                    android:textSize="@dimen/text_size_16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/ok_btn"
                style="@style/btn_style"
                android:layout_marginTop="@dimen/dp30"
                android:background="@color/blue_0082E9"
                android:text="@string/label_search"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</layout>